# EMP

./: .gitignore  README.md
backend-api/: pyproject.toml
backend-api/app/: config.py  csv_demo.py  main.py
backend-api/app/auth/: router.py  schemas.py  service.py
backend-api/app/clinicians/: router.py  schemas.py  service.py
backend-api/app/logs/: router.py  schemas.py  service.py
backend-api/app/middleware/: auth.py
backend-api/app/ml_engine/: foundation_model_v1.ubj  master_eeg_features.csv  model_signature.json  router.py  service.py
backend-api/app/patients/: router.py  schemas.py  service.py
backend-api/app/services/: ml_service.py
backend-api/app/utils/: model_loader.py
backend-api/csv_data/: P1201_simulated_data.csv  P301_simulated_data.csv  P501_simulated_data.csv  P601_simulated_data.csv  P801_simulated_data.csv
clinician-dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
clinician-dashboard/src/: App.tsx  supabaseClient.ts
clinician-dashboard/src/components/: ControlPanel.tsx  RiskCard.tsx
clinician-dashboard/src/context/: AuthContext.tsx
clinician-dashboard/src/pages/: Dashboard.tsx  Login.tsx
clinician-dashboard/src/services/: api.ts
ml-pipeline/: environment.yml  main_pipeline.py
ml-pipeline/models/: foundation_model_v1.ubj  model_signature.json  shap_explainer.joblib
ml-pipeline/src/: config.py  deploy.py  processing.py  training.py
patient-frontend/: index.html  package-lock.json  package.json  tailwind.config.js
patient-frontend/src/: App.tsx
(+12 files in other folders)
