[tool.poetry]
name = "emp-backend-api"
version = "0.1.0"
description = "Backend API for Epilepsy Management Platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
supabase = "^2.10.0"
pydantic-settings = "^2.9.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
structlog = "^24.4.0"
httpx = "^0.27.0"
email-validator = "^2.3.0"
xgboost = "^3.1.2"
pandas = "^2.3.3"
scikit-learn = "^1.8.0"
python-multipart = "^0.0.21"
numpy = "^2.3.5"
mne = "^1.11.0"
optuna = "^4.6.0"
joblib = "^1.5.3"
shap = "^0.50.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.6.0"
mypy = "^1.11.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"
